2002-01-18  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.6.

	* src/libsoup/soup-queue.c: Handle HTTP response codes 204 (No
	Content) and 304 (Not Modified) the same way we handle HTTP HEAD
	requests.  (See RFC 2616, Section 4.3, last paragraph)

2002-01-17  Joe Shaw  <joe@ximian.com>

	* src/libsoup/soup-message.c: Add a
	soup_message_get_http_version() function.

2001-12-19  Alex Graveley  <alex@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_seed): #define
	RAND_status to constants for older versions of OpenSSL (before
	0.9.5).

2001-12-17  Alex Graveley  <alex@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_seed): Use
	RAND_status less often. (Merge from soup-0-6)

2001-12-17  Alex Graveley  <alex@ximian.com>

	* src/soup-ssl-proxy/soup-openssl.c (soup_openssl_init): Implement
	a simple PRNG seed if needed. (Merge from soup-0-6)

2001-12-09  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-uri.c (normalize_path): Add path normalization
	code from libxml.

2001-11-13  Joe Shaw  <joe@ximian.com>

	* configure.in, src/libsoup/soup-private.h: Version 0.5.5.

	* src/libsoup/soup-socket.c (soup_address_new): Don't ptrace().
	Fixes hangs on SMP boxes.

	* src/libsoup/soup-socks.c: Fixes for SOCKS proxies, courtesy of
	Alex.  Pulled down from HEAD.

2001-11-01  Alex Graveley  <alex@ximian.com>

	* src/libsoup/soup-context.c (soup_context_connect_cb): Forgot to
	remove missed line.
	
2001-11-01  Alex Graveley  <alex@ximian.com>

	Backports from HEAD.
	
	* configure.in, src/libsoup/soup-private.h: Version 0.5.4.

	* src/libsoup/soup-context.c (soup_context_connect_cb): Drop
	connection count if connect failed.
	(soup_context_get_connection): Increment connection count before
	calling soup_socket_connect() to avoid connection limit being
	passed by many messages queued at the same time.

	* src/soup-httpd/soup-httpd.c (read_done_cb): Assign request's data